--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -1,5 +1,6 @@
-<h1>Hello</h1>
+{% extends "layout.html.twig" %}
 
-{% if eradat == 1 %}
-    Hello {{name}}
-{% endif %}
+{% block content %}
+    sdfsdfsdfsdfs
+    asdsadas
+{% endblock %}
