--- a/templates/view.html.twig
+++ b/templates/view.html.twig
@@ -19,5 +19,6 @@
     <div>{{product.price}}</div>
     <div>{{product.quantity}}</div>
     <div>{{product.status}}</div>
+    <a href="add2cart.php">خرید</a>
 
 {% endblock %}
