--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -5,6 +5,7 @@
         <title>Shop</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="{{path}}/css/style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
         <div>
@@ -13,6 +14,10 @@
 
         <hr>
         <div>
+            {% if cart.getItemCount>0 %}
+                <a href="cart.php">Cart: {{cart.getItemCount()}}</a>
+            {% endif %}
+
             {% if user is defined %}
                 <a href="{{path}}/logout.php">خروج</a>
             {% else %}
